k8s/hpa_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ing
  namespace: school-portal-app-3-tier
  annotations:
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api 
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3500
